fix: fix label digits alignment

--- a/tools/byte_converter/src/app/app.css
+++ b/tools/byte_converter/src/app/app.css
@@ -12,6 +12,10 @@
   gap: 1em;
 }
 
+.app-spacer {
+  line-height: 0;
+}
+
 .app-editors {
   display: grid;
   grid-template-columns: max-content max-content max-content;
@@ -22,7 +26,7 @@
 }
 
 .app-editors .empty {
-  grid-column: span 4;
+  grid-column: span 3;
 }
 
 .app-divider-line {
@@ -32,9 +36,7 @@
 }
 
 .app-divider-editors-visibility {
-  grid-column: span 2;
   display: flex;
-  justify-content: center;
   font-size: 0.7em;
   margin: 0.2em 0;
 }
@@ -44,6 +46,7 @@
   line-height: 0;
 }
 
+.app-spacer,
 .app-editor-label {
   display: flex;
   justify-content: flex-end;
@@ -62,8 +65,12 @@
   justify-content: flex-end;
 }
 
+.app-editor-actions {
+  display: flex;
+}
+
 .app-calculator {
-  grid-column: span 4;
+  grid-column: span 3;
   margin-top: 4em;
 }
 
